# zephyr-coaps-client

./: .clang-format  .clang_format  .gitignore  10min-prj.conf  5min-prj.conf  60min-prj.conf  60min0-prj.conf  CFBROWSER.md  CMakeLists.txt  FASTTRACK.md  Kconfig  NEXTSTEPS.md  NOTICE.md  POWERCONSUMPTION.md  README.md  ROADMAP.md  VERSION  ads1115.overlay  at-cmd-prj.conf  at-host-prj.conf  bme-prj.conf  bq25186.overlay  bsec-prj.conf  build.txt  conexio-solar.overlay  console-prj.conf  debug-prj.conf  dps310-prj.conf  dps310.overlay  feather-flash.sh  feather-solar.overlay  flash-prj.conf  golioth-prj.conf  hivescale-conexio51.overlay  hivescale-conexio61.overlay  hivescale-dk.overlay  hivescale-feather.overlay  hivescale-feather51.overlay  hivescale-prj.conf  hivescale-thingy91x.overlay  (+36 more)
boards/: circuitdojo_feather_nrf9151_ns.conf  circuitdojo_feather_nrf9151_ns.overlay  circuitdojo_feather_nrf9160_ns.conf  circuitdojo_feather_nrf9160_ns.overlay  circuitdojo_feather_nrf9161_ns.conf  circuitdojo_feather_nrf9161_ns.overlay  conexio_stratus_pro_nrf9151_ns.overlay  conexio_stratus_pro_nrf9161_ns.conf  conexio_stratus_pro_nrf9161_ns.overlay  nrf9151_connectkit_nrf9151_ns.conf  nrf9151_connectkit_nrf9151_ns.overlay  nrf9151dk_nrf9151_ns.conf  nrf9151dk_nrf9151_ns.overlay  nrf9160dk_nrf9160_ns.conf  nrf9160dk_nrf9160_ns.overlay  nrf9161dk_nrf9161_ns.conf  nrf9161dk_nrf9161_ns.overlay  thingy91_nrf9160_ns.conf  thingy91_nrf9160_ns.overlay  thingy91x_nrf9151_ns.conf  thingy91x_nrf9151_ns.overlay
cert/: Californium.pem  ISRGRootX1.pem
child_image/: mcuboot.conf  spm.conf
child_image/mcuboot/boards/: circuitdojo_feather_nrf9160.overlay
configuration/: pm_static_2.yml
docu/: BUILDTRACK.md  CELLULAREXPLORER.md  CFBROWSER.md  CONFIGURATION.md  FASTTRACK.md  LEARNINGS.md  MEASUREMENTS.md  MOBILEBEEHIVESCALE.md  NETWORKSCANNER.md  NEXTSTEPS.md  POWERCONSUMPTION-2022-06.md  POWERCONSUMPTION.md  REMOTECTRL.md  ROADMAP.md  SHCMDSLIST.md
docu/power_comparison/: README.md  power.ods
dts/bindings/adc/: nau7802-scale.yaml
dts/bindings/iio/: solar-control.yaml
extras/: README.md  setup-2.6.x.sh  setup.sh
extras/circuitdojo_feather_nrf9161/: Kconfig  Kconfig.defconfig  board.cmake  circuitdojo_feather_nrf9161_ns_defconfig
extras/conexio_stratus_pro/: Kconfig.board  Kconfig.defconfig  board.cmake  conexio_stratus_pro.yaml  conexio_stratus_pro_common-pinctrl.dtsi  conexio_stratus_pro_common.dtsi  conexio_stratus_pro_defconfig  conexio_stratus_pro_nrf9151_defconfig  conexio_stratus_pro_nrf9151_ns.yaml  conexio_stratus_pro_nrf9151_ns_defconfig  conexio_stratus_pro_nrf9161.yaml  conexio_stratus_pro_nrf9161_ns.yaml  conexio_stratus_pro_ns.yaml  conexio_stratus_pro_ns_defconfig  pre_dt_board.cmake
extras/snippets/thingy91x-modem-trace-ext-flash/: gd25le255-ext-flash.overlay  snippet.yml  thingy91x-ext-flash.conf
extras/udev-rules/: 50-cp210x.rules  50-nordic-probe.rules  50-raspi-probe.rules  README.md
extras/v2.6.2/circuitdojo_feather_nrf9161/: CMakeLists.txt  circuitdojo_feather_nrf9161_common.dtsi  circuitdojo_feather_nrf9161_defconfig  circuitdojo_feather_nrf9161_ns.yaml  circuitdojo_feather_nrf9161_partition_conf.dtsi
extras/v2.6.2/circuitdojo_feather_nrf9161/doc/: index.rst
extras/v2.6.2/conexio_stratus_pro/: Kconfig.board  Kconfig.defconfig  Kconfig.defconfig.nrf9151  Kconfig.defconfig.nrf9161  board.cmake  board.yml  conexio_stratus_pro_nrf9151.dts  conexio_stratus_pro_nrf9151.yaml  conexio_stratus_pro_nrf9161.dts  conexio_stratus_pro_nrf9161_defconfig  conexio_stratus_pro_nrf9161_ns.dts  conexio_stratus_pro_nrf9161_ns_defconfig
extras/v2.6.x/circuitdojo_feather_nrf9161/: Kconfig.board  circuitdojo_feather_nrf9161_ns_defconfig  circuitdojo_feather_nrf9161_pm_static.yml
extras/v2.9.0/circuitdojo/feather_nrf9151/: Kconfig  Kconfig.defconfig  board.cmake  circuitdojo_feather_nrf9151_common-pinctrl.dtsi  circuitdojo_feather_nrf9151_defconfig  circuitdojo_feather_nrf9151_nrf9151.yaml  circuitdojo_feather_nrf9151_ns.dts  circuitdojo_feather_nrf9151_ns_defconfig  startup.c
extras/v2.9.0/circuitdojo/feather_nrf9161/: circuitdojo_feather_nrf9161_common.dtsi  circuitdojo_feather_nrf9161_nrf9161.yaml  startup.c  (+1 more)
prebuild/: README.md  circuitdojo_feather_app_update.hex  circuitdojo_feather_full.hex  circuitdojo_feather_nrf9151_app_update.hex  circuitdojo_feather_nrf9151_full.hex  circuitdojo_feather_nrf9160_ns_app_signed.hex  circuitdojo_feather_nrf9160_ns_full.hex  conexio_stratus_pro_app_update.hex  conexio_stratus_pro_full.hex  nrf9151dk_app_update.hex  nrf9151dk_full.hex  nrf9160dk_app_update.hex  nrf9160dk_full.hex  nrf9160dk_nrf9160_ns_app_signed.hex  nrf9160dk_nrf9160_ns_full.hex  power_consumption_comparison_nrf9160dk_nrf9160_ns_full.hex  thingy91_app_update.hex  thingy91_full.hex  thingy91_nrf9160_ns_app_signed.hex  thingy91_nrf9160_ns_full.hex  thingy91x_app_update.hex  thingy91x_full.hex
src/: accelerometer_sensor.c  accelerometer_sensor.h  appl_adc.c  appl_adc.h  appl_diagnose.c  appl_diagnose.h  appl_eeprom.c  appl_eeprom.h  appl_settings.c  appl_settings.h  appl_storage.c  appl_storage.h  appl_storage_config.c  appl_storage_config.h  appl_time.c  appl_time.h  appl_update.c  appl_update.h  appl_update_coap.c  appl_update_coap.h  appl_update_xmodem.c  appl_update_xmodem.h  battery_adc.c  battery_adc.h  bq25186.c  coap_appl_client.c  coap_appl_client.h  coap_appl_golioth_client.c  coap_client.c  coap_client.h  coap_prov_client.c  coap_prov_client.h  console_input.c  console_input.h  distance_sensor.c  distance_sensor.h  dtls_client.c  dtls_client.h  dtls_credentials.c  dtls_credentials.h  (+48 more)
src/ext_sensors/: CMakeLists.txt  Kconfig  ext_sensors.c  ext_sensors.h
sysbuild/: mcuboot.conf
sysbuild/mcuboot/: app.overlay  prj.conf
sysbuild/mcuboot/boards/: circuitdojo_feather_nrf9151.overlay  circuitdojo_feather_nrf9160.conf  circuitdojo_feather_nrf9160.overlay  circuitdojo_feather_nrf9161.conf  conexio_stratus_pro_nrf9151.conf  conexio_stratus_pro_nrf9161.conf  nrf9151_connectkit_nrf9151_ns.conf  thingy91_nrf9160.conf  thingy91x_nrf9151.conf
(+42 files in other folders)
